--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
     <head>
         <title>My Food Blog</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
         <header>
-            <h1>Food Blog</h1>
+            <h1>Today's Food Blog</h1>
         </header>
 
         <nav>
@@ -18,15 +19,16 @@
         </nav>
         <main>
             <section>
-                <h3>Todays Food</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <h3 class="sec_tit">Todays Food</h3>
+                <p id="blog_par">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </section>
             <img src = "https://cdn-a.william-reed.com/var/wrbm_gb_food_pharma/storage/images/publications/food-beverage-nutrition/foodnavigator.com/article/2019/07/10/from-superfoods-to-exotic-cuisines-google-search-data-reveals-10-years-of-food-trends/9900732-1-eng-GB/From-superfoods-to-exotic-cuisines-Google-search-data-reveals-10-years-of-food-trends_wrbm_large.jpg">
             <img src = "/images/food.png">
             <section>
-                <h3>Instructions and Ingredients</h3>
+                <h3 class="sec_tit">Instructions and Ingredients</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </section>
+            <h1>Tomorrow's Food Blog</h1>
         </main>
         <footer>
             <p>Contact me at alfonso@fooodies.org</p>
